--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <html>
 	<head>
 		<title>Basic webpage</title>
+		<style type="text/css">
+			h1{
+				color: red;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>Hello World</h1>
 	</body>
 </html>
+
+
+
