--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html>
 	<head>
 		<title>Basic webpage</title>
-	</head>
+</head>
 	<body>
 		<h1>Hello World</h1>
+	
+		<script src="script.js"></script>
 	</body>
 </html>
-
 
 
